@@ -22,7 +22,7 @@ public:
 	// Destructor
 
 	// Getters --- ADDITIONAL GETTERS ARE NEEDED FOR MANIPULATION OF INDIVIDUAL VERTICES probably - get_vertex_at(key), returning value
-	const unordered_map<int, vertex> get_vertices();
+	unordered_map<int, vertex> get_vertices() const;
 
 	// Setters --- ADDITIONAL SETTERS ARE NEEDED FOR MANIPULATION OF INDIVIDUAL VERTICES probably - set_vertex_at(key, value)
 	void set_vertices(unordered_map<int, vertex> new_vertices);
