@@ -14,6 +14,7 @@ public:
 	int _load_factor;
 	int _path_weight;
 	static int _id_counter;
+
 	// Constructors
 	vertex();
 	vertex(int new_id, unordered_map<vertex*, int> new_edges, int new_load_factor);
@@ -25,14 +26,14 @@ public:
 	// Getters
 	int vertex::get_id() const;
 	unordered_map<vertex*, int> get_edges();
-	int vertex::get_load_factor() const;
+	int get_load_factor();
 	int getPathWeight() const;
 
 	// Setters
 	void set_id(int new_id);
 	void set_edges(unordered_map<vertex*, int> new_edges);
 	void set_load_factor(int new_load_factor);
-	void setPathWeight(int weight);
+	void set_path_weight(int new_weight);
 
 	// Methods
 private:
